@@ -92,44 +92,6 @@ get_schema(Mapi mid)
 	return NULL;
 }
 
-/* return TRUE if the sys.systemfunctions table exists */
-int
-has_systemfunctions(Mapi mid)
-{
-	MapiHdl hdl;
-	int ret;
-
-	if ((hdl = mapi_query(mid,
-			      "SELECT t.id "
-			      "FROM sys._tables t, "
-			           "sys.schemas s "
-			      "WHERE t.name = 'systemfunctions' AND "
-			            "t.schema_id = s.id AND "
-			            "s.name = 'sys'")) == NULL ||
-	    mapi_error(mid))
-		goto bailout;
-	ret = mapi_get_row_count(hdl) == 1;
-	while ((mapi_fetch_row(hdl)) != 0) {
-		if (mapi_error(mid))
-			goto bailout;
-	}
-	if (mapi_error(mid))
-		goto bailout;
-	mapi_close_handle(hdl);
-	return ret;
-
-  bailout:
-	if (hdl) {
-		if (mapi_result_error(hdl))
-			mapi_explain_result(hdl, stderr);
-		else
-			mapi_explain_query(hdl, stderr);
-		mapi_close_handle(hdl);
-	} else
-		mapi_explain(mid, stderr);
-	return 0;
-}
-
 /* return TRUE if the sys.schemas table has a column named system */
 int
 has_schemas_system(Mapi mid)
@@ -1337,7 +1299,7 @@ dump_functions(Mapi mid, stream *toConsole, const char *sname, const char *fname
 	q = malloc(l);
 	snprintf(q, l, functions,
 		 dumpSystem ? "" : "AND f.id ",
-		 dumpSystem ? "" : has_systemfunctions(mid) ? "NOT IN (SELECT function_id FROM sys.systemfunctions) " : "> 2000 ",
+		 dumpSystem ? "" : "NOT IN (SELECT function_id FROM sys.systemfunctions) ",
 		 sname ? "AND s.name = '" : "",
 		 sname ? sname : "",
 		 sname ? "' " : "",
@@ -1466,7 +1428,7 @@ dump_database(Mapi mid, stream *toConsole, int describe, const char useInserts)
 		      "f.id = p.obj_id AND "
 		      "p.auth_id = a.id AND "
 		      "p.grantor = g.id "
-		      "%s"	/* and f.id not in systemfunctions */
+		      "AND f.id NOT IN (SELECT function_id FROM sys.systemfunctions) "
 		"ORDER BY s.name, f.name, a.name, g.name, p.grantable";
 	const char *schemas =
 		"SELECT s.name, a.name "
@@ -1545,7 +1507,7 @@ dump_database(Mapi mid, stream *toConsole, int describe, const char useInserts)
 			     "sys.functions f "
 			"WHERE f.language < 3 AND "
 			      "s.id = f.schema_id "
-			"%s"		/* and f.id not in systemfunctions */
+			"AND f.id NOT IN (SELECT function_id FROM sys.systemfunctions) "
 			"UNION "
 			"SELECT s.name AS sname, "
 			       "tr.id AS id, "
@@ -1803,9 +1765,7 @@ dump_database(Mapi mid, stream *toConsole, int describe, const char useInserts)
 	hdl = NULL;
 
 	/* dump views, functions, and triggers */
-	snprintf(query, sizeof(query), views_functions_triggers,
-		 has_systemfunctions(mid) ? "AND f.id NOT IN (SELECT function_id FROM sys.systemfunctions) " : "");
-	if ((hdl = mapi_query(mid, query)) == NULL ||
+	if ((hdl = mapi_query(mid, views_functions_triggers)) == NULL ||
 	    mapi_error(mid))
 		goto bailout;
 
@@ -1980,9 +1940,7 @@ dump_database(Mapi mid, stream *toConsole, int describe, const char useInserts)
 		goto bailout;
 	mapi_close_handle(hdl);
 
-	snprintf(query, sizeof(query), function_grants,
-		 has_systemfunctions(mid) ? "AND f.id NOT IN (SELECT function_id FROM sys.systemfunctions) " : "");
-	if ((hdl = mapi_query(mid, query)) == NULL ||
+	if ((hdl = mapi_query(mid, function_grants)) == NULL ||
 	    mapi_error(mid))
 		goto bailout;
 
